minor spacing issue in experience text

--- a/styles.css
+++ b/styles.css
@@ -1033,6 +1033,7 @@ a:hover, a:focus, a:active {
 .es-experience-detail-text {
   text-align: left;
   font-size: 11pt;
+  margin-right: 20px;
 }
 
 .es-experience-detail-text-bullet {
